--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jca-ui-kit",
-  "version": "1.1.1",
+  "version": "0.0.0",
   "description": "JCA UI Kit from components built in Just Connect . Africa app",
   "main": "dist/index.html",
   "scripts": {
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "babel-loader": "^8.1.0",
+    "bootstrap": "^4.5.0",
     "browser-sync": "^2.26.7",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
@@ -51,6 +52,7 @@
     "gulp-sass-glob": "^1.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "i": "^0.3.6",
+    "normalize.css": "^8.0.1",
     "webpack-stream": "^5.2.1"
   }
 }
