--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp": "^4.0.2",
     "gulp-bump": "^3.1.3",
     "gulp-clean": "^0.4.0",
+    "gulp-copy": "^4.0.1",
     "gulp-htmlmin": "^5.0.1",
     "uglifyjs-webpack-plugin": "^2.2.0"
   },
