--- a/package.json
+++ b/package.json
@@ -32,28 +32,29 @@
   "devDependencies": {
     "@babel/core": "7.10.3",
     "@babel/preset-env": "7.10.3",
-    "gulp": "4.0.2",
-    "gulp-bump": "3.1.3",
-    "gulp-clean": "0.4.0",
-    "gulp-copy": "4.0.1",
-    "gulp-htmlmin": "5.0.1",
-    "uglifyjs-webpack-plugin": "2.2.0",
     "animate.css": "4.1.0",
     "babel-loader": "8.1.0",
     "bootstrap": "4.5.0",
     "browser-sync": "2.26.7",
+    "gulp": "4.0.2",
     "gulp-autoprefixer": "7.0.1",
     "gulp-babel": "8.0.0",
+    "gulp-bump": "3.1.3",
+    "gulp-clean": "0.4.0",
     "gulp-clean-css": "4.3.0",
     "gulp-concat": "2.6.1",
+    "gulp-copy": "4.0.1",
+    "gulp-htmlmin": "5.0.1",
     "gulp-imagemin": "7.1.0",
     "gulp-notify": "3.2.0",
+    "gulp-nunjucks-render": "^2.2.3",
     "gulp-plumber": "1.2.1",
     "gulp-sass": "4.1.0",
     "gulp-sass-glob": "1.1.0",
     "gulp-sourcemaps": "2.6.5",
     "i": "0.3.6",
     "normalize.css": "8.0.1",
+    "uglifyjs-webpack-plugin": "2.2.0",
     "webpack-stream": "5.2.1"
   },
   "dependencies": {}
