--- a/package.json
+++ b/package.json
@@ -32,17 +32,20 @@
   "devDependencies": {
     "@babel/core": "7.10.3",
     "@babel/preset-env": "7.10.3",
+    "@popperjs/core": "^2.4.2",
     "animate.css": "4.1.0",
     "babel-loader": "8.1.0",
     "bootstrap": "4.5.0",
     "browser-sync": "2.26.7",
+    "clipboard": "^2.0.6",
+    "gemini-scrollbar": "^1.5.3",
     "gulp": "4.0.2",
     "gulp-autoprefixer": "7.0.1",
     "gulp-babel": "8.0.0",
     "gulp-bump": "3.1.3",
     "gulp-clean": "0.4.0",
     "gulp-clean-css": "4.3.0",
-    "gulp-concat": "2.6.1",
+    "gulp-concat": "^2.6.1",
     "gulp-copy": "4.0.1",
     "gulp-htmlmin": "5.0.1",
     "gulp-imagemin": "7.1.0",
@@ -52,7 +55,10 @@
     "gulp-sass": "4.1.0",
     "gulp-sass-glob": "1.1.0",
     "gulp-sourcemaps": "2.6.5",
+    "gulp-uglify": "^3.0.2",
     "i": "0.3.6",
+    "imask": "^6.0.5",
+    "jquery": "^3.5.1",
     "normalize.css": "8.0.1",
     "uglifyjs-webpack-plugin": "2.2.0",
     "webpack-stream": "5.2.1"
