--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@ttsftwr/jca-ui-kit",
+  "type": "module",
   "version": "0.2.0",
   "description": "JCA UI Kit from components built in Just Connect . Africa app",
   "main": "dist/index.html",
@@ -38,6 +39,7 @@
     "bootstrap": "4.5.0",
     "browser-sync": "2.26.7",
     "clipboard": "2.0.6",
+    "datatables.net": "^1.10.21",
     "gemini-scrollbar": "1.5.3",
     "gulp": "4.0.2",
     "gulp-autoprefixer": "7.0.1",
@@ -58,9 +60,12 @@
     "gulp-uglify": "3.0.2",
     "i": "0.3.6",
     "imask": "6.0.5",
+    "ionicons": "^5.1.2",
     "jquery": "3.5.1",
     "normalize.css": "8.0.1",
+    "prismjs": "^1.20.0",
     "uglifyjs-webpack-plugin": "2.2.0",
+    "vue": "^2.6.11",
     "webpack-stream": "5.2.1"
   },
   "dependencies": {}
