--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@ttsftwr/jca-ui-kit",
   "type": "module",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "JCA UI Kit from components built in Just Connect . Africa app",
-  "main": "dist/index.html",
+  "main": "docs/index.html",
   "homepage": "https://thabotitus.github.io/jca-ui-kit/",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -43,7 +43,6 @@
     "browser-sync": "2.26.7",
     "clipboard": "2.0.6",
     "datatables.net": "^1.10.21",
-    "gemini-scrollbar": "1.5.3",
     "gulp": "4.0.2",
     "gulp-autoprefixer": "7.0.1",
     "gulp-babel": "8.0.0",
