--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "gulp-notify": "3.2.0",
     "gulp-nunjucks-render": "2.2.3",
     "gulp-plumber": "1.2.1",
-    "gulp-sass": "4.1.0",
+    "gulp-sass": "https://github.com/ttsftwr/gulp-sass.git",
     "gulp-sass-glob": "1.1.0",
     "gulp-sourcemaps": "3.0.0",
     "gulp-uglify": "3.0.2",
